# ser

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  example-trace.md  example-trace.txt
.github/workflows/: general.yml
examples/: simple_pgm.rs  simple_storage.rs  simple_storage_deploy.rs  simple_token.rs  swaps.rs
src/: lib.rs  machine.rs  memory.rs  parser.rs  record.rs  stack.rs  storage.rs  traits.rs
src/conversion/: mod.rs
src/exec/: mod.rs
src/instruction/: mod.rs
src/smt/: mod.rs
src/smt/bitvec/: mod.rs  z3.rs
src/state/: context.rs  env.rs  evm.rs  mod.rs  tree.rs
src/types/: mod.rs
test-contracts/src/: SimpleToken.sol  SimpleToken2.sol  SimpleTokenGiver.sol  Storage.sol  StorageSimple.sol  SuperSimpleToken.sol  VulnerableVault.sol
test-contracts/test/: Storage.t.sol
tests/: lib.rs
