[package]
name = "ser"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
ruint = { version = "1.7.0", features = ["primitive-types", "rlp", "serde"] }
uuid = { version = "1.2.2", features = ["v4"] }
hex = "0.4.3"
smallvec = "1.10.0"
rand = "0.8.5"
revm = { version = "2.3", default-features = false, features = [
    "std",
    "k256",
    "with-serde",
    "memory_limit",
    "optional_eip3607"
] }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", features = ["full"]}
paste = "1.0.12"
rlp = "0.5.2"
serde = "1.0.164"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
z3 = {version = "0.11.2", features = ["static-link-z3"]}

[target.'cfg(target_arch = "x86_64")'.dependencies]
z3 = "0.11.2"
